# tailscale-webfinger

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
tailscale_webfinger/: __init__.py
tests/: test_fastapi.py
