[tool.poetry]
name = "tailscale-webfinger"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tailscale-webfinger"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
